# tagify

./: Cargo.toml  LICENSE  go.mod  go.sum  index.html  package-lock.json  package.json  tagify.go
middleware/: error_handler.go
public/: index.html
src/: app-root.ts  index.css  index.ts  main.rs  main.tsx
src/components/: tag-table.ts
src/models/: playlists.ts
src/pages/: home.tsx  login.tsx  playlist.tsx  playlists.tsx  tag-login.ts  tag-playlist.ts  tag-playlists.ts
src/pages/components/: nav.tsx  tagSelect.tsx
src/routes/: root.tsx
templates/: home.tmpl  index.tmpl  playlist.tmpl  playlists.tmpl
templates/includes/: home.tmpl  index.tmpl  playlist.tmpl  playlists.tmpl
templates/layouts/: base.tmpl  navbar.tmpl
