[package]
name = "tagify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
dotenv = "0.15.0"
either = "1.9.0"
spotify-rs = "0.3.9"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
url = "2.4.1"
